# TC-Driver

./: README.md  requirements.txt
drivers/: FORCES_solver_wawaweewa_20211231541427841_P.json  FORCES_solver_wawaweewa_20211231541543522_P.json  car_tester.py  error_reproducer.py  param_dump.yaml  setup.cfg  smile.csv  smile_waypoints.txt  smile_waypoints_new.txt  spline_plotter.py  stdout_temp.txt  tondo.csv  tondo_waypoints.txt  tondo_waypoints_new.txt  track_creator.ipynb
drivers/error_log/: main.py  param_dump.yaml  sol_dump.yaml
drivers/experiments/multi_seed/: coords_mpc.csv  multitester_mpc.py
drivers/experiments/trajectory_aligner/: coords_mpc_tr.csv  f_position_x.csv  f_position_y.csv  f_trajectory_MPCC.txt  main.py  main_pandas.py
drivers/profiling/: line_log.lprof  log.prof  main.py  output_calls.txt  output_cumtime.txt  output_time.txt  report.txt
drivers/src/MPC/: drivers.py
drivers/src/MPC/utils/: MPC_utils.py  comp_utils.py  (+1 more)
drivers/src/config/: MPCC_debug.yaml  MPCC_tat.md  MPC_params.yaml  car_params.yaml  mus.txt
drivers/src/maps/: SILVERSTONE.yaml  SILVERSTONE_OBS.yaml  SOCHI.yaml  circle.yaml  circle_waypoints.txt  f.yaml  f_trajectory_MPCC.txt  f_waypoints.txt  rbring.yaml  smile.yaml  smile_waypoints.txt  smile_waypoints_new.txt  squarish.yaml
drivers/src/pbl_drivers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drivers/src/test_drivers/: drivers.py
drivers/src/utils_old/: MPC_utils.py  comp_utils.py  forces_nlp_solver_gen.py  forces_solver_gen.py  nlp_functions.py  nlp_utils.py  osqp_comp.py  solv_utils.py  test.py  utils.py
(+656 files in other folders)
