[metadata]
name = pbl-drivers
version = 0.0.1
author = Edoardo Ghignone
author_email = eghignone@student.ethz.ch
description = A package for handling PBL drivers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src